--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ mediapack ]
 
 jobs:
 
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag extvos/java:latest
+      run: docker build . --file Dockerfile --tag extvos/java:mediapack
 
     - name: Login to Docker Hub
       run: docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
 
     - name: Push to Docker Hub
-      run: docker push extvos/nginx:latest
+      run: docker push extvos/java:mediapack
