--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -20,4 +20,4 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
 
     - name: Push to Docker Hub
-      run: docker push extvos/nginx:latest
+      run: docker push extvos/java:latest
